# django-survey

./: .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  coverage.sh  example_conf.yaml  manage.py  readme.md  requirements.txt  requirements_dev.txt  settings.py  setup.cfg  setup.py  tox.ini  urls.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
doc/: example_conf.yaml  models.plantuml
example_project/: manage.py
example_project/example_project/: settings.py  urls.py
survey/: __init__.py  actions.py  admin.py  apps.py  decorators.py  forms.py  models.py  settings.py  urls.py  utils.py  views.py  widgets.py
survey/exporter/: survey2x.py
survey/management/: question2tex.py  survey2csv.py  survey_command.py
survey/migrations/: 0001_initial.py  0002_survey_template.py  0003_auto_20170316_0935.py  0003_auto_20170320_0337.py  0004_polymorphic_answers_to_kiss.py  0005_rename_question_related_name.py  0006_add_related_name_for_categories.py  0007_auto_20180217_1515.py  0008_translated_name_for_models.py  0010_survey_editable_answers.py  0011_auto_20200210_1928.py  0012_add_display_by_category.py  0012_auto_20200224_2220.py  0013_auto_20200609_0748.py  0014_survey_redirect_url.py
survey/models/: __init__.py  answer.py  category.py  question.py  response.py  survey.py
survey/templatetags/: survey_extras.py
survey/tests/: __init__.py  base_test.py  issue70.json  test_default_settings.py  test_survey_auth_required.py  testdump.json
survey/views/: __init__.py  confirm_view.py  index_view.py  survey_completed.py  survey_detail.py  survey_result.py
survey_test/: settings.py  urls.py  wsgi.py
survey_test/templates/: base.html
(+103 files in other folders)
