[metadata]
name = django-survey-and-report
version = 1.4.2
description = A django survey app that can export results as CSV or PDF using your native language.
long_description = file: README.md
long_description_content_type = text/markdown
author = Pierre SASSOULAS
author_email = pierre.sassoulas@gmail.com
license = AGPL-3.0
url = https://github.com/Pierre-Sassoulas/django-survey
classifiers =
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Natural Language :: Russian
    Natural Language :: Spanish
    Natural Language :: French
    Natural Language :: Japanese
    Natural Language :: Dutch
    Natural Language :: Chinese (Traditional)
    Natural Language :: German
    Natural Language :: Indonesian
    Natural Language :: Portuguese
    Natural Language :: Polish
    Topic :: Utilities
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django

[options]
packages = find:
include_package_data = True
install_requires =
    django>=2.2,<5
    django-bootstrap-form>=3.4
    django-tastypie>=0.14.2
    django-registration>=3.0
    pytz>=2018.9
    ordereddict>=1.1
    pyyaml>=4.2b1

[options.extras_require]
dev =
    pySankeyBeta~=1.3.0
    django-rosetta
    coverage
    python-coveralls
    coveralls
    colorama
    pylint
    flake8
    pre-commit
sankey = pySankeyBeta~=1.3.0
